--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,5 +13,5 @@ jobs:
       - name: 'Release'
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: "${{ secrets.AUTOMATION_PAT }}"
           prerelease: false
