--- a/.github/workflows/terraform_validate.yaml
+++ b/.github/workflows/terraform_validate.yaml
@@ -12,4 +12,4 @@ jobs:
       - name: terraform validate
         uses: dflook/terraform-validate@v1
         with:
-          path: my-terraform-config
+          path: 'examples/complete/'
