--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -12,13 +12,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: 'Security Scan'
-          if: github.ref != format('refs/heads/{0}', github.event.repository.default_branch)
-          uses: aquasecurity/trivy-action@0.14.0
-          with:
-            scan-type: 'config'
-            scan-ref: './examples/complete/'
-            hide-progress: false
-            exit-code: '1'
-            ignore-unfixed: true
-            severity: 'CRITICAL,HIGH'
+      - name: Security Scan
+        if: github.ref != format('refs/heads/{0}', github.event.repository.default_branch)
+        uses: aquasecurity/trivy-action@0.14.0
+        with:
+          scan-type: 'config'
+          scan-ref: './examples/complete/'
+          hide-progress: false
+          exit-code: '1'
+          ignore-unfixed: true
+          severity: 'CRITICAL,HIGH'
